--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,34 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+@import '../styles/fonts.css';
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #f3f4f6;
+	--accent: #ffffff;
+	--foreground: #171717;
+	--primary: oklch(0.704 0.14 182.503);
+	--secondary: oklch(0.606 0.25 292.717);
+}
+
+.dark {
+	--background: oklch(0.279 0.041 260.031);
+	--accent: oklch(0.446 0.043 257.281);
+	--foreground: #ededed;
+	--primary: oklch(0.704 0.14 182.503);
+	--secondary: oklch(0.606 0.25 292.717);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--color-primary: var(--primary);
+	--color-secondary: var(--secondary);
+	--color-accent: var(--accent);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: iranyekan, Helvetica, sans-serif;
 }
