--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -252,16 +252,22 @@ body {
 }
 
 .no-scrollbar::-webkit-scrollbar {
-	width: 0px;
+	height: 0;
+	width: 0;
 }
 /* Track */
 .no-scrollbar::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 5px grey;
 	border-radius: 10px;
+	height: 0;
+	width: 0;
+	display: none;
 }
 
 /* Handle */
 .no-scrollbar::-webkit-scrollbar-thumb {
-	background: red;
-	border-radius: 10px;
+	background: transparent;
+	border-radius: 0px;
+	height: 0;
+	width: 0;
 }
