--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,8 @@
 	--card-foreground: oklch(0.13 0.028 261.692);
 	--popover: oklch(1 0 0);
 	--popover-foreground: oklch(0.13 0.028 261.692);
-	--primary-foreground: oklch(0.985 0.002 247.839);
-	--secondary-foreground: oklch(0.21 0.034 264.665);
+	--primary-foreground: #ffffff;
+	--secondary-foreground: #ffffff;
 	--muted: oklch(0.967 0.003 264.542);
 	--muted-foreground: oklch(0.551 0.027 264.364);
 	--accent-foreground: oklch(0.21 0.034 264.665);
